# Spin_dynamics

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  foo.ini  fpm.toml  guz.in  input.ini  input2.ini  kur.in  mkdocs.yml  pedal.in  pedali.in  pyproject.toml
app/: main.f90
docs/: index.md
example/: input.ini  input_only_H_invalid_case.ini  plot.py  pyproject.toml  trace_sampling.ipynb  trace_sampling.py  utils.py
src/: dynamics.f90  hamiltonian.f90  hamiltonian_sp.f90  kroenecker.f90  m_random.f90  matrix_exponential.f90  moments.f90  observables.f90  qm_dynamics.f90  spinchem.f90  spinop.f90  spinsys.f90  symmetry.f90  utils.f90
src/sc/: class_radical_pair.f90  sc_dynamics.f90
test/: check.f90  coo_vs_csr.f90  coo_vs_csr.ini  test_getHsp.f90  test_getHsp.ini
